--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kurabi/LearnTravisCI -f Dockerfile.dev .
+  - docker build -t kurabi/learntravisci -f Dockerfile.dev .
 
 script:
-  - docker run kurabi/LearnTravisCI npm run test -- --coverage
+  - docker run kurabi/learntravisci npm run test -- --coverage
